    Request.getBodySource() instead.
  - We deprecated Request.Builder.setBodyGenerator(BodyGenerator). Use
    Request.Builder.setBodySource(BodySource) instead. This change will
    probably have a longer than usual deprecation period.
  - We deprecated SingleUseBodyGenerator. We have not yet designed a
    replacement.
  - We created BodySourceTester to help test BodySource implementations.

* Events

  - We deprecated EventClient.post(EventGenerator) and EventGenerator.
    This interface effectively required implementation on top of
    BodyGenerator. No replacement is currently planned.
  - We changed the HttpEventClient.post(Iterable) and .post(T...)
    implementations to use DynamicBodySource.

* BalancingHttpClient logging

  The RetryingResponseHandler used by BalancingHttpClient will only include an
  exception's stack in the log once per 30 seconds per exception class.

Platform 1.12

* We improved the previous BodyGenerator bug fix to remove a race condition.

Platform 1.11

* SingleUseBodyGenerator

  We created SingleUseBodyGenerator, an abstract class implementing
  BodyGenerator that enforces only being called once. The BalancingHttpClient
  will not retry a request once a SingleUseBodyGenerator has been called.

* Trace Token improvements
  - TraceTokenManager.registerRequestToken() now returns a TraceTokenScope
    which can be used with try-with-resources to restore the thread's previous
    token state.
  - TraceTokenManager methods are now all static.
  - TraceTokenModule is no longer needed and has been deprecated.
  - HttpClient now propagates the trace token to BodyGenerator and
    ResponseHandler calls.

* Library Upgrades

  - AutoValue to 1.0
  - Jetty to 9.2.7
  - jnr-posix to 3.0.9

* [Bug] Interrupt the BodyGenerator thread on write failure. This might have
  been the cause of HttpClient hangs.

* [Bug] Fixed status code for JAX-RS query parameter parse error
